[gd_scene load_steps=20 format=3 uid="uid://br0q66onus1re"]

[ext_resource type="Script" uid="uid://ddl3n5he0vbvn" path="res://scripts/main.gd" id="1_sugp2"]
[ext_resource type="Script" uid="uid://dq3wedb56wb7d" path="res://scripts/letter_spawner.gd" id="2_ya4ey"]
[ext_resource type="PackedScene" uid="uid://chb5s6wu4kq3r" path="res://scenes/text_character.tscn" id="3_eb6dy"]
[ext_resource type="Material" uid="uid://bc6jp4np8854j" path="res://materials/grass.tres" id="4_choun"]
[ext_resource type="Script" uid="uid://cokobf3jt0ekk" path="res://scripts/player_spawner.gd" id="4_jyhfs"]
[ext_resource type="WhisperResource" uid="uid://cb6p83se860b1" path="res://addons/godot_whisper/models/gglm-tiny.en.bin" id="5_o6xl0"]
[ext_resource type="PackedScene" uid="uid://pti7ed7ufnvi" path="res://scenes/player.tscn" id="5_tbgi4"]
[ext_resource type="Script" uid="uid://c3bqtfnant3s5" path="res://addons/godot_whisper/capture_stream_to_text.gd" id="6_o6xl0"]
[ext_resource type="Texture2D" uid="uid://bxcix84f0w282" path="res://4K_acoustic_panel_3_basecolor.png" id="8_choun"]
[ext_resource type="AudioStream" uid="uid://dff2hgrxyxq2g" path="res://Conversation Between Two Friends Daily Life Conversation Improve Your English Adrija Biswas.mp3" id="8_tipki"]
[ext_resource type="Texture2D" uid="uid://jwlj60bmgykl" path="res://4K_acoustic_panel_3_height.png" id="9_ya4ey"]
[ext_resource type="Texture2D" uid="uid://cyiw1ymx3r7k8" path="res://4K_acoustic_panel_3_normal.png" id="10_eb6dy"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_tbgi4"]
sky_top_color = Color(0.624539, 0.703945, 1, 1)
sky_horizon_color = Color(0.922716, 0.837793, 1.01814, 1)
ground_bottom_color = Color(0.866094, 0.909714, 1, 1)
ground_horizon_color = Color(0.859479, 0.984212, 1, 1)

[sub_resource type="Sky" id="Sky_tefeu"]
sky_material = SubResource("ProceduralSkyMaterial_tbgi4")

[sub_resource type="Environment" id="Environment_o6xl0"]
background_mode = 2
sky = SubResource("Sky_tefeu")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="FastNoiseLite" id="FastNoiseLite_tbgi4"]

[sub_resource type="VoxelGeneratorNoise2D" id="VoxelGeneratorNoise2D_tefeu"]
noise = SubResource("FastNoiseLite_tbgi4")
height_start = -30.0
height_range = 20.0

[sub_resource type="VoxelMesherTransvoxel" id="VoxelMesherTransvoxel_o6xl0"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_trceg"]
albedo_texture = ExtResource("8_choun")
normal_enabled = true
normal_texture = ExtResource("10_eb6dy")
heightmap_enabled = true
heightmap_scale = 7.0
heightmap_texture = ExtResource("9_ya4ey")
uv1_scale = Vector3(0.25, 0.25, 0.25)
uv1_triplanar = true
uv1_world_triplanar = true
texture_filter = 0

[node name="Main" type="Node3D"]
script = ExtResource("1_sugp2")

[node name="MultiplayerUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MultiplayerUI"]
custom_minimum_size = Vector2(500, 300)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="MultiplayerUI/VBoxContainer"]
layout_mode = 2

[node name="HostBtn" type="Button" parent="MultiplayerUI/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "HOST"

[node name="JoinBtn" type="Button" parent="MultiplayerUI/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "JOIN"

[node name="LobbiesScrollContainer" type="ScrollContainer" parent="MultiplayerUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LobbiesList" type="VBoxContainer" parent="MultiplayerUI/VBoxContainer/LobbiesScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Environment" type="Node" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_o6xl0")

[node name="Letters" type="Node" parent="."]

[node name="LetterSpawner" type="MultiplayerSpawner" parent="Letters"]
spawn_path = NodePath("..")
script = ExtResource("2_ya4ey")
letter_scene = ExtResource("3_eb6dy")

[node name="Players" type="Node" parent="."]

[node name="PlayerSpawner" type="MultiplayerSpawner" parent="Players"]
spawn_path = NodePath("..")
script = ExtResource("4_jyhfs")
player_scene = ExtResource("5_tbgi4")

[node name="SpawnPos" type="Marker3D" parent="Players"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.85952, 0)

[node name="Terrain" type="VoxelTerrain" parent="."]
material_override = ExtResource("4_choun")
generator = SubResource("VoxelGeneratorNoise2D_tefeu")
mesher = SubResource("VoxelMesherTransvoxel_o6xl0")
cast_shadow = 0

[node name="SpeechToText" type="SpeechToText" parent="."]
language_model = ExtResource("5_o6xl0")
script = ExtResource("6_o6xl0")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_tipki")
volume_db = -31.155
bus = &"Record"

[node name="Walls" type="Node3D" parent="."]

[node name="CSGBox3D" type="CSGBox3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -25)
use_collision = true
size = Vector3(75, 70, 0.25)
material = SubResource("StandardMaterial3D_trceg")

[node name="CSGBox3D2" type="CSGBox3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 25)
use_collision = true
size = Vector3(75, 70, 0.25)
material = SubResource("StandardMaterial3D_trceg")

[node name="CSGBox3D3" type="CSGBox3D" parent="Walls"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -25, 0, 1.09278e-06)
use_collision = true
size = Vector3(75, 70, 0.25)
material = SubResource("StandardMaterial3D_trceg")

[node name="CSGBox3D4" type="CSGBox3D" parent="Walls"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 25, 0, -1.09278e-06)
use_collision = true
size = Vector3(75, 70, 0.25)
material = SubResource("StandardMaterial3D_trceg")

[connection signal="pressed" from="MultiplayerUI/VBoxContainer/HBoxContainer/HostBtn" to="." method="_on_host_btn_pressed"]
[connection signal="pressed" from="MultiplayerUI/VBoxContainer/HBoxContainer/JoinBtn" to="." method="_on_join_btn_pressed"]
[connection signal="transcribed_msg" from="SpeechToText" to="." method="_on_speech_to_text_transcribed_msg"]
